2005-04-05  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el: use generic-x for common configuration files

	* dotemacs.el:
	(minimal): new config file for vc-related operations
	(auto-mode-alist): add .djava (dynamic java) extension to java-mode

	* dotemacs-cust.el:
	(custom-set-variables): added some ecb settings

	* config/vc-config.el: initial checkin

2005-02-14  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/latex-config.el: new environments for slides
	(my-LaTeX-hook): externalize this hook

	* config/changelog-config.el:
	(yh/project-changelog-file): usual name is ChangeLog

	* dotemacs.el:
	(de-context-kill): don't throw an error, return to label instead

2005-04-01  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el: suppress annoying advice

	* perso/mycode.el:
	(c-guess-basic-syntax): reenable this line (really don't understand... :/)

	* dotemacs.el: do not debug-on-error by default
	(diff-buffer-with-associated-file): new util function
	(global-set-key): change meaning of C-x k to diff when unsaved

2005-03-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn-hacked.el:
	(svn-status-get-specific-revision-internal): "svn cat -r BASE" should really be a local operation. I don't want files to be created in my working directories.
	(svn-ediff-exit-hook): don't emit errors at this point, since it causes buffers not to be deleted
	(svn-status-line-info->lastchangerev): attempt to fix error message after commit

	* config/ediff-config.el:
	(yh/install-ediff-changelog-keys): anonymous lambda expressions seems to be troublesome

2005-03-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tempo-c++.el: new macros for c++ "for iterator"

2005-03-18  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/visual.el: use file-name-shadow-mode

2005-02-14 Yann Hodique <Yann.Hodique@lifl.fr>

	* perso/mycompletion.el:
	(gpl-header): updated gpl-header so that it fits well with doxygen

	* dotemacs-cust.el:
	moved semanticdb stuff to setq-default
